compiler-core/src/parse/snapshots/gleam_core__parse__tests__type_invalid_constructor_arg.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\ntype A {\n    A(type: String)\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:3:7
  │
3 │     A(type: String)
  │       ^^^^ I was not expecting this

Expected one of: 
")"
a constructor argument name
